crates/bitnet-inference/tests/snapshots/snapshot_wave24__w24_stream_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave24.rs
expression: cfg
---
StreamConfig {
    buffer_size: 8,
    flush_on_whitespace: true,
    flush_on_newline: true,
    max_pending_tokens: 64,
}
