crates/bitnet-inference/tests/snapshots/snapshot_wave24__w24_stream_event_all_variants.snap
---
source: crates/bitnet-inference/tests/snapshot_wave24.rs
expression: events
---
[
    Token(
        42,
    ),
    Text(
        "hello",
    ),
    EndOfStream,
    Error(
        "invalid utf8",
    ),
]
