crates/bitnet-inference/tests/snapshots/snapshot_wave24__w24_thread_pool_config_custom.snap
---
source: crates/bitnet-inference/tests/snapshot_wave24.rs
expression: cfg
---
ThreadPoolConfig {
    num_threads: 8,
    affinity: true,
    priority: 2,
    name_prefix: "bitnet-w24",
}
