crates/bitnet-inference/tests/snapshots/snapshot_wave24__w24_thread_pool_metrics_busy.snap
---
source: crates/bitnet-inference/tests/snapshot_wave24.rs
expression: m
---
ThreadPoolMetrics {
    active_threads: 6,
    queue_depth: 12,
    tasks_completed: 50000,
    utilization: 0.78,
}
