crates/bitnet-inference/tests/snapshots/snapshot_wave24__w24_thread_pool_metrics_idle.snap
---
source: crates/bitnet-inference/tests/snapshot_wave24.rs
expression: m
---
ThreadPoolMetrics {
    active_threads: 0,
    queue_depth: 0,
    tasks_completed: 0,
    utilization: 0.0,
}
