crates/bitnet-inference/tests/snapshots/snapshot_wave24__w24_token_buffer_empty.snap
---
source: crates/bitnet-inference/tests/snapshot_wave24.rs
expression: buf
---
TokenBuffer {
    bytes: [],
}
